<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:orientation="horizontal"
            android:paddingBottom="18dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="18dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/user"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/setting_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:tag=":aesthetic_ignore"
                android:text="@string/not_login" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:orientation="horizontal"
            android:paddingBottom="18dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="18dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/update_background"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp" />
            <Switch
                android:id="@+id/setting_isUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:tag=":aesthetic_ignore" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:orientation="horizontal"
            android:paddingBottom="18dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="18dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/vibrate_frequency"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/setting_vibrate_frequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:tag=":aesthetic_ignore"
                android:text="@string/vibrate_default" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:orientation="horizontal"
            android:paddingBottom="18dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="18dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/time_zones"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/setting_time_zone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:tag=":aesthetic_ignore"
                android:text="@string/time_zones_default" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:orientation="horizontal"
            android:paddingBottom="18dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="18dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/time_delay"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/setting_time_delay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:tag=":aesthetic_ignore"
                android:text="@string/time_delay_default" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:orientation="horizontal"
            android:paddingBottom="18dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="18dp">
            <TextView
                android:id="@+id/setting_about"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/about"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>