<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:id="@+id/lbs_cancel_alarm"

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="8"
            android:text="@string/new_alarm"
            android:textColor="?android:textColorPrimary"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbs_add_alarm"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/add"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/start_address"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/lbs_start_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:tag=":aesthetic_ignore"
            android:text="" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/end_address"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/lbs_end_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:tag=":aesthetic_ignore"
            android:text="" />


    </LinearLayout>
    <!--//Sound-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="Ring"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />
        <ImageView
            android:id="@+id/lbs_ringtoneImage"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_ringtone_disabled"
            tools:alpha="0.333"
            tools:tint="@color/attribouter_iconColor" />
    </LinearLayout>

    <!--//Vibrate-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="Virbate"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/lbs_vibrateImage"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_ringtone_disabled"
            tools:alpha="0.333"
            tools:tint="@color/attribouter_iconColor" />
    </LinearLayout>

    <!--//Name-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="Alarm Name"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/lbs_name"
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/title_alarm_name"
            android:inputType="textCapWords|textAutoComplete|textAutoCorrect"
            android:lines="1"
            android:maxLines="1"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:singleLine="true"
            android:textColor="?android:textColorPrimary"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            android:textStyle="bold"
            android:autofillHints="Alarm" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.baidu.mapapi.map.MapView
            android:id="@+id/mmap"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </com.baidu.mapapi.map.MapView>
    </LinearLayout>

</LinearLayout>